Fix side pane title lenght
It’s overflowing because we’re setting the width from the inner form,
not the outer container.

--- a/app/webroot/css/sentences/search.css
+++ b/app/webroot/css/sentences/search.css
@@ -47,6 +47,10 @@
     margin: 0 5px;
 }
 
+#annexe_content h2 {
+    width: 280px;
+}
+
 legend {
     font-size: 15px;
 }
